--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,9 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "server.js",
   "dependencies": {
+    "@google/genai": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
