--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "dependencies": {
     "@google/genai": "^1.0.1",
+    "@google/generative-ai": "^0.24.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
