feat: Implement AI code review feature with editor and markdown display
- Added Code component for code editing and review functionality
- Integrated react-simple-code-editor for code input
- Utilized Prism.js for syntax highlighting
- Implemented Markdown rendering for code review output
- Created Navbar component for application header
- Updated package.json to include necessary dependencies (axios, prismjs, react-markdown, react-simple-code-editor, rehype-highlight)
- Added custom styles for the code editor and layout
- Removed unused react.svg asset and added new code.svg assets

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
+    "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
+    "react-simple-code-editor": "^0.14.1",
+    "rehype-highlight": "^7.0.2",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
